--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-125.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-125.cfg
@@ -46,6 +46,14 @@ PART
 
 	MODULE
 	{
+		name = ModuleAnimateGeneric
+		animationName = DockingSmallLights
+		startEventGUIName = Docking Lights Off
+		endEventGUIName = Docking Lights On
+	}
+	
+	MODULE
+	{
 		name = ModuleDockingNode
 		referenceAttachNode = top
 		nodeType = size1
