--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-25.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-25.cfg
@@ -47,6 +47,14 @@ PART
 
 	MODULE
 	{
+		name = ModuleAnimateGeneric
+		animationName = DockingLargeLights
+		startEventGUIName = Docking Lights Off
+		endEventGUIName = Docking Lights On
+	}
+	
+	MODULE
+	{
 		name = ModuleDockingNode
 		referenceAttachNode = top
 		nodeType = size2
