--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-docking-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-docking-01.cfg
@@ -20,21 +20,21 @@ PART
 	node_stack_bottom = 0.0, -0.14, 0.0, 0.0, -1.0, 0.0, 4
 
 	bulkheadProfiles = size4
-	
+
 	TechRequired = nanolathing
-	entryCost = 11200
-	cost = 1200
+	entryCost = 15100
+	cost = 2200
 	category = Utility
 	subcategory = 0
-	title = Modular Annular Docking Connector
+	title = Modular Annular Truss Docking Connector
 	manufacturer = Giga Bloks Construction Toys in association with Clamp Depot
-	description = 
+	description =
 
 	attachRules = 1,0,1,0,0
 
 	fuelCrossFeed = true
-	
-	mass = 0.2
+
+	mass = 0.65
 	dragModelType = default
 	maximum_drag = 0.25
 	minimum_drag = 0.25
@@ -43,7 +43,7 @@ PART
 	maxTemp = 1400
 
 	tags = connect frame scaffold structur strut truss nearfuture annul berth capture connect couple dock fasten join moor socket
-	
+
 	MODULE
 	{
 		name = ModuleAnimateGeneric
@@ -51,7 +51,7 @@ PART
 		startEventGUIName = Docking Lights Off
 		endEventGUIName = Docking Lights On
 	}
-	
+
 	MODULE
 	{
 		name = ModuleDockingNode
