--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-docking-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-docking-01.cfg
@@ -1,4 +1,4 @@
-// Near Future Construction 0.6.0
+// Near Future Construction 0.7.0
 // Large truss to truss docking component
 PART
 {
@@ -21,7 +21,7 @@ PART
 
 	bulkheadProfiles = size4
 
-	TechRequired = nanolathing
+	TechRequired = metaMaterials
 	entryCost = 15100
 	cost = 2200
 	category = Utility
