--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-125.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-125.cfg
@@ -20,20 +20,20 @@ PART
 	node_stack_bottom = 0.0, -0.0594593, 0.0, 0.0, -1.0, 0.0, 2
 
 	bulkheadProfiles = octotruss, size1
-	
-	TechRequired = nanolathing
+
+	TechRequired = metaMaterials
 	entryCost = 11200
 	cost = 1200
 	category = Utility
 	subcategory = 0
 	title = Modular Octo-Girder Docking Connector
 	manufacturer = Giga Bloks Construction Toys in association with Clamp Depot
-	description = A docking port compatible with the standard Clamp-O-Tron docking port. 
+	description = A docking port compatible with the standard Clamp-O-Tron docking port.
 
 	attachRules = 1,0,1,0,0
 
 	fuelCrossFeed = true
-	
+
 	mass = 0.15
 	dragModelType = default
 	maximum_drag = 0.25
@@ -41,7 +41,7 @@ PART
 	angularDrag = 0.5
 	crashTolerance = 20
 	maxTemp = 1400
-	
+
 	tags = connect frame scaffold structur strut truss nearfuture octo berth capture connect couple dock fasten join moor socket
 
 	MODULE
@@ -51,7 +51,7 @@ PART
 		startEventGUIName = Docking Lights Off
 		endEventGUIName = Docking Lights On
 	}
-	
+
 	MODULE
 	{
 		name = ModuleDockingNode
