--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-25.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-25.cfg
@@ -1,4 +1,4 @@
-// Near Future Construction 0.6.0
+// Near Future Construction 0.7.0
 // Large truss 2.5m docking component
 PART
 {
@@ -22,7 +22,7 @@ PART
 
 	bulkheadProfiles = octotruss, size2
 
-	TechRequired = nanolathing
+	TechRequired = metaMaterials
 	entryCost = 13000
 	cost = 1400
 	category = Utility
