--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-octo.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-octo.cfg
@@ -21,7 +21,7 @@ PART
 
 	bulkheadProfiles = octotruss
 
-	TechRequired = nanolathing
+	TechRequired = metaMaterials
 	entryCost = 12600
 	cost = 1300
 	category = Utility
