--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-25.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-25.cfg
@@ -25,7 +25,7 @@ PART
 	TechRequired = metaMaterials
 	entryCost = 13000
 	cost = 1400
-	category = Utility
+	category = Coupling
 	subcategory = 0
 	title = Modular Octo-Girder Heavy Docking Connector
 	manufacturer = Giga Bloks Construction Toys in association with Clamp Depot
@@ -44,7 +44,8 @@ PART
 	maxTemp = 1400
 
 	tags = connect frame scaffold structur strut truss nearfuture octo berth capture connect couple dock fasten join moor socket
-
+	stagingIcon = DECOUPLER_VERT
+	
 	MODULE
 	{
 		name = ModuleAnimateGeneric
@@ -58,5 +59,6 @@ PART
 		name = ModuleDockingNode
 		referenceAttachNode = top
 		nodeType = size2
+		stagingEnabled = False
 	}
 }
