--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-octo.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-octo.cfg
@@ -24,7 +24,7 @@ PART
 	TechRequired = metaMaterials
 	entryCost = 12600
 	cost = 1300
-	category = Utility
+	category = Coupling
 	subcategory = 0
 	title = Modular Octagonal Docking Connector
 	manufacturer = Giga Bloks Construction Toys in association with Clamp Depot
@@ -43,7 +43,8 @@ PART
 	maxTemp = 1400
 
 	tags = connect frame scaffold structur strut truss nearfuture octo berth capture connect couple dock fasten join moor socket
-
+	stagingIcon = DECOUPLER_VERT
+	
 	MODULE
 	{
 		name = ModuleAnimateGeneric
@@ -60,6 +61,23 @@ PART
 		captureMinRollDot = 0.99999
 		snapRotation = true
 		snapOffset = 45
+		stagingEnabled = False
+	}
+	MODULE
+	{
+		name = ModuleB9PartSwitch
+		moduleID = meshSwitch
+		switcherDescription = Core
+		SUBTYPE
+		{
+			name = Hollow
+		}
+		SUBTYPE
+		{
+			name = Hatch
+			transform = Hatch
+			transform = HatchBack
+		}
 
 	}
 }
