--- a/GameData/NearFutureConstruction/Parts/Structures/docking-25/docking-25.cfg
+++ b/GameData/NearFutureConstruction/Parts/Structures/docking-25/docking-25.cfg
@@ -13,10 +13,10 @@ PART
 	node_stack_top = 0.0, 0.07761741, 0.0, 0.0, 1.0, 0.0, 2
 	node_stack_bottom = 0.0, -0.1137203, 0.0, 0.0, -1.0, 0.0, 2
 
-	TechRequired = metaMaterials
+	TechRequired = Unresearchable
 	entryCost = 10200
 	cost = 1080
-	category = Utility
+	category = none
 	subcategory = 0
 	title = Grip-O-Tron Large Docking Connector
 	manufacturer = Clamp Depot
