--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-125.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-125.cfg
@@ -24,7 +24,7 @@ PART
 	TechRequired = metaMaterials
 	entryCost = 11200
 	cost = 1200
-	category = Utility
+	category = Coupling
 	subcategory = 0
 	title = Modular Octo-Girder Docking Connector
 	manufacturer = Giga Bloks Construction Toys in association with Clamp Depot
@@ -43,7 +43,8 @@ PART
 	maxTemp = 1400
 
 	tags = connect frame scaffold structur strut truss nearfuture octo berth capture connect couple dock fasten join moor socket
-
+	stagingIcon = DECOUPLER_VERT
+	
 	MODULE
 	{
 		name = ModuleAnimateGeneric
@@ -57,5 +58,6 @@ PART
 		name = ModuleDockingNode
 		referenceAttachNode = top
 		nodeType = size1
+		stagingEnabled = False
 	}
 }
