--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-25.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-25.cfg
@@ -52,6 +52,8 @@ PART
 		animationName = DockingLargeLights
 		startEventGUIName = Docking Lights Off
 		endEventGUIName = Docking Lights On
+		actionGUIName = Toggle Docking Lights
+        defaultActionGroup = Light
 	}
 
 	MODULE
