--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-octo.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-octo.cfg
@@ -51,6 +51,8 @@ PART
 		animationName = DockingOctoLights
 		startEventGUIName = Docking Lights Off
 		endEventGUIName = Docking Lights On
+		actionGUIName = Toggle Docking Lights
+        defaultActionGroup = Light
 	}
 
 	MODULE
