--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-docking-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-docking-01.cfg
@@ -28,7 +28,7 @@ PART
 	subcategory = 0
 	title = Modular Annular Truss Docking Connector
 	manufacturer = Giga Bloks Construction Toys in association with Clamp Depot
-	description =
+	description = A high strength docking connector of significant size. Hollow!
 
 	attachRules = 1,0,1,0,0
 
@@ -42,9 +42,9 @@ PART
 	crashTolerance = 20
 	maxTemp = 1400
 
-	tags = connect frame scaffold structur strut truss nearfuture annul berth capture connect couple dock fasten join moor socket
+	tags = connect frame scaffold structur strut truss nearfuture annul berth capture connect couple dock fasten join moor socket hollow
 	stagingIcon = DECOUPLER_VERT
-	
+
 	MODULE
 	{
 		name = ModuleColorChanger
