--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-docking-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-docking-01.cfg
@@ -8,16 +8,15 @@ PART
 
 	MODEL
 	{
-		model = NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-docking 01
+		model = NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-docking-01
 		position = 0.0, 0.0, 0.0
 		scale = 1,1,1
 		rotation = 0, 0, 0
 	}
 	rescaleFactor = 1
 
-	node_stack_top01 = 0.0, 3.7497899, 0.0, 0.0, 1.0, 0.0, 3
-	node_stack_bottom01 = 0.0, -3.749789, 0.0, 0.0, -1.0, 0.0,3
-	node_attach = 1.187252,0.0, 0.0, 1.0, 0.0, 0.0, 3
+	node_stack_top = 0.0, 0.103, 0.0, 0.0, 1.0, 0.0, 3
+	node_stack_bottom01 = 0.0, -0.106, 0.0, 0.0, -1.0, 0.0,3
 
 
 	TechRequired = metaMaterials
@@ -46,14 +45,51 @@ PART
 
 	tags = connect frame scaffold structur strut truss nearfuture square spine berth capture connect couple dock fasten join moor socket
 	stagingIcon = DECOUPLER_VERT
+	
 	MODULE
 	{
 		name = ModuleDockingNode
 		referenceAttachNode = top
 		nodeType = spinal
-		captureMinRollDot = 0.99999
+		captureMinRollDot = 0.9999
 		snapRotation = true
 		snapOffset = 0
 		stagingEnabled = False
+	}
+	MODULE
+	{
+		name = ModuleColorChanger
+		shaderProperty = _EmissiveColor
+		animRate = 0.8
+		animState = false
+		useRate = true
+		toggleInEditor = true
+		toggleInFlight = true
+		toggleInFlight = true
+		unfocusedRange = 5
+		toggleName = Toggle Lights
+		eventOnName = Lights On
+		eventOffName = Lights Off
+		toggleAction = True
+		defaultActionGroup = Light
+		redCurve
+		{
+			key = 0 0 0 3
+			key = 1 1 1 0
+		}
+		greenCurve
+		{
+			key = 0 0 0 1
+			key = 1 1 1 0
+		}
+		blueCurve
+		{
+			key = 0 0 0 0
+			key = 1 1 1 0
+		}
+		alphaCurve
+		{
+			key = 0 0.5
+		}
 	}
 }
