--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-docking-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-docking-01.cfg
@@ -26,9 +26,9 @@ PART
 	cost = 2200
 	category = Coupling
 	subcategory = 0
-	title = Modular Annular Truss Docking Connector
-	manufacturer = Giga Bloks Construction Toys in association with Clamp Depot
-	description = A high strength docking connector of significant size. Hollow!
+	title = #LOC_NFConstruction_truss-circular-docking-01_title
+	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+	description = #LOC_NFConstruction_truss-circular-docking-01_description
 
 	attachRules = 1,0,1,0,0
 
