--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-25.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-25.cfg
@@ -27,9 +27,9 @@ PART
 	cost = 1400
 	category = Coupling
 	subcategory = 0
-	title = Modular Octo-Girder Heavy Docking Connector
-	manufacturer = Giga Bloks Construction Toys in association with Clamp Depot
-	description = A heavier Modular Octo-Girder docking port. Compatible with the larger standard Clamp-O-Tron Senior docking port.
+	title = #LOC_NFConstruction_truss-octo-docking-25_title
+	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+	description = #LOC_NFConstruction_truss-octo-docking-25_description
 
 	attachRules = 1,0,1,1,0
 
@@ -45,7 +45,7 @@ PART
 
 	tags = connect frame scaffold structur strut truss nearfuture octo berth capture connect couple dock fasten join moor socket
 	stagingIcon = DECOUPLER_VERT
-	
+
 	MODULE
 	{
 		name = ModuleAnimateGeneric
