--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-octo.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-octo.cfg
@@ -26,9 +26,9 @@ PART
 	cost = 1300
 	category = Coupling
 	subcategory = 0
-	title = Modular Octagonal Docking Connector
-	manufacturer = Giga Bloks Construction Toys in association with Clamp Depot
-	description = A docking port compatible uniquely with other octagonal docking connectors. Configured to lock solely at 90 degree increments for efficient construction.
+	title = #LOC_NFConstruction_truss-octo-docking-octo_title
+	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+	description = #LOC_NFConstruction_truss-octo-docking-octo_description
 
 	attachRules = 1,0,1,0,0
 
@@ -69,14 +69,14 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
-		switcherDescription = Core
+		switcherDescription = #LOC_NFConstruction_switcher_docking_title
 		SUBTYPE
 		{
-			name = Hollow
+			name = #LOC_NFConstruction_switcher_docking_variant1
 		}
 		SUBTYPE
 		{
-			name = Hatch
+			name = #LOC_NFConstruction_switcher_docking_variant2
 			transform = Hatch
 			transform = HatchBack
 		}
