--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-docking-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-docking-01.cfg
@@ -24,9 +24,9 @@ PART
 	cost = 1850
 	category = Coupling
 	subcategory = 0
-	title = Modular Spinal Truss Docking Connector
-	manufacturer = Giga Bloks Construction Toys
-	description = A docking connector adapted for the spinal truss specification. Can lock to 90 degree increments.
+	title = #LOC_NFConstruction_truss-spinal-docking-01_title
+	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+	description =  #LOC_NFConstruction_truss-spinal-docking-01_description
 	attachRules = 1,0,1,0,0
 
 	bulkheadProfiles = spinaltruss
