--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-octo.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-octo.cfg
@@ -72,11 +72,13 @@ PART
 		switcherDescription = #LOC_NFConstruction_switcher_docking_title
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_docking_variant1
+			name = Basic
+			title= #LOC_NFConstruction_switcher_docking_variant1
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_docking_variant2
+			name = Hatch
+			title= #LOC_NFConstruction_switcher_docking_variant2
 			transform = Hatch
 			transform = HatchBack
 		}
