--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-docking-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-docking-01.cfg
@@ -42,7 +42,7 @@ PART
 	crashTolerance = 20
 	maxTemp = 1400
 
-	tags = connect frame scaffold structur strut truss nearfuture annul berth capture connect couple dock fasten join moor socket hollow
+	tags = #LOC_NFConstruction_truss-circular-docking-01_tags
 	stagingIcon = DECOUPLER_VERT
 
 	MODULE
