--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-octo.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-octo.cfg
@@ -42,7 +42,7 @@ PART
 	crashTolerance = 20
 	maxTemp = 1400
 
-	tags = connect frame scaffold structur strut truss nearfuture octo berth capture connect couple dock fasten join moor socket
+	tags = #LOC_NFConstruction_truss-octo-docking-octo_tags
 	stagingIcon = DECOUPLER_VERT
 
 	MODULE
