--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-25.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-25.cfg
@@ -43,7 +43,7 @@ PART
 	crashTolerance = 20
 	maxTemp = 1400
 
-	tags = connect frame scaffold structur strut truss nearfuture octo berth capture connect couple dock fasten join moor socket
+	tags = #LOC_NFConstruction_truss-octo-docking-25_tags
 	stagingIcon = DECOUPLER_VERT
 
 	MODULE
