--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-docking-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-docking-01.cfg
@@ -43,7 +43,7 @@ PART
 	maxTemp = 2000
 	thermalMassModifier = 0.4 // I am hollow
 
-	tags = connect frame scaffold structur strut truss nearfuture square spine berth capture connect couple dock fasten join moor socket
+	tags = #LOC_NFConstruction_truss-spinal-docking-01_tags
 	stagingIcon = DECOUPLER_VERT
 
 	MODULE
