--- a/GameData/NearFutureConstruction/Parts/Docking/docking-truss/docking-linear-2.cfg
+++ b/GameData/NearFutureConstruction/Parts/Docking/docking-truss/docking-linear-2.cfg
@@ -20,13 +20,13 @@ PART
 	node_stack_bottom = 0.0, -0.1137203, 0.0, 0.0, -1.0, 0.0, 3
 
 	TechRequired = Unresearchable
-	entryCost = 10200
-	cost = 1080
+	entryCost = 18200
+	cost = 3900
 	category = Coupling
 	subcategory = 0
-	title =
-	manufacturer =
-	description =
+	title = #LOC_NFConstruction_docking-linear-2_title
+	manufacturer = #LOC_NFConstruction_manufacturer_clampdepot_title
+	description = #LOC_NFConstruction_docking-linear-2_description
 
 	bulkheadProfiles = srf
 
@@ -34,7 +34,7 @@ PART
 
 	fuelCrossFeed = true
 
-	mass = 0.15
+	mass = 0.3
 	dragModelType = default
 	maximum_drag = 0.25
 	minimum_drag = 0.25
@@ -43,7 +43,7 @@ PART
 	maxTemp = 1400
 	thermalMassModifier = 0.4 // I am hollow
 
-	tags = connect frame scaffold structur strut truss nearfuture octo berth capture connect couple dock fasten join moor socket
+	tags = #LOC_NFConstruction_docking-linear-2_tags
 
 	MODULE
 	{
