--- a/GameData/NearFutureConstruction/Parts/Docking/docking-truss/docking-linear-1.cfg
+++ b/GameData/NearFutureConstruction/Parts/Docking/docking-truss/docking-linear-1.cfg
@@ -16,8 +16,8 @@ PART
 
 	rescaleFactor = 1
 
-	node_stack_top = 0.0, 0.07761741, 0.0, 0.0, 1.0, 0.0, 3
-	node_stack_bottom = 0.0, -0.1137203, 0.0, 0.0, -1.0, 0.0, 3
+	node_stack_top = 0.0, 0.022, 0.0, 0.0, 1.0, 0.0, 1
+	node_attach = 0.0, -0.15, 0.0, 0.0, -1.0, 0.0, 1
 
 	TechRequired = Unresearchable
 	entryCost = 11200
@@ -30,7 +30,7 @@ PART
 
 	bulkheadProfiles = srf
 
-	attachRules = 1,0,1,0,0
+	attachRules = 1,1,1,0,0
 
 	fuelCrossFeed = true
 
