--- a/GameData/NearFutureConstruction/Parts/Docking/docking-truss/docking-linear-2.cfg
+++ b/GameData/NearFutureConstruction/Parts/Docking/docking-truss/docking-linear-2.cfg
@@ -16,9 +16,10 @@ PART
 
 	rescaleFactor = 1
 
-	node_stack_top = 0.0, 0.07761741, 0.0, 0.0, 1.0, 0.0, 3
-	node_stack_bottom = 0.0, -0.1137203, 0.0, 0.0, -1.0, 0.0, 3
-
+	
+	node_stack_top = 0.0, 0.11, 0.0, 0.0, 1.0, 0.0, 2
+	node_attach = 0.0, -0.094, 0.0, 0.0, -1.0, 0.0, 2
+	
 	TechRequired = Unresearchable
 	entryCost = 18200
 	cost = 3900
@@ -30,7 +31,7 @@ PART
 
 	bulkheadProfiles = srf
 
-	attachRules = 1,0,1,0,0
+	attachRules = 1,1,1,0,0
 
 	fuelCrossFeed = true
 
