--- a/GameData/NearFutureConstruction/Parts/Docking/docking-truss/docking-linear-1.cfg
+++ b/GameData/NearFutureConstruction/Parts/Docking/docking-truss/docking-linear-1.cfg
@@ -30,7 +30,7 @@ PART
 
 	bulkheadProfiles = srf
 
-	attachRules = 1,1,1,0,0
+	attachRules = 1,1,1,1,0
 
 	fuelCrossFeed = true
 
@@ -50,5 +50,9 @@ PART
 		name = ModuleDockingNode
 		referenceAttachNode = top
 		nodeType = linear1
+		captureMinRollDot = 0.99999
+		snapRotation = true
+		snapOffset = 180
+		stagingEnabled = False
 	}
 }
