--- a/GameData/NearFutureConstruction/Parts/Docking/docking-truss/docking-linear-2.cfg
+++ b/GameData/NearFutureConstruction/Parts/Docking/docking-truss/docking-linear-2.cfg
@@ -31,7 +31,7 @@ PART
 
 	bulkheadProfiles = srf
 
-	attachRules = 1,1,1,0,0
+	attachRules = 1,1,1,1,0
 
 	fuelCrossFeed = true
 
@@ -51,5 +51,9 @@ PART
 		name = ModuleDockingNode
 		referenceAttachNode = top
 		nodeType = linear2
+		captureMinRollDot = 0.99999
+		snapRotation = true
+		snapOffset = 180
+		stagingEnabled = False
 	}
 }
