--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-octo.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-octo.cfg
@@ -17,7 +17,7 @@ PART
 	rescaleFactor = 1
 
 	node_stack_top = 0.0, 0.1171736, 0.0, 0.0, 1.0, 0.0, 2
-	node_stack_bottom = 0.0, -0.0734584, 0.0, 0.0, -1.0, 0.0, 2
+	node_stack_bottom = 0.0, -0.07, 0.0, 0.0, -1.0, 0.0, 2
 
 	bulkheadProfiles = octotruss
 
