--- a/GameData/NearFutureConstruction/Parts/Docking/docking-truss/docking-linear-2.cfg
+++ b/GameData/NearFutureConstruction/Parts/Docking/docking-truss/docking-linear-2.cfg
@@ -16,11 +16,11 @@ PART
 
 	rescaleFactor = 1
 
-	
+
 	node_stack_top = 0.0, 0.11, 0.0, 0.0, 1.0, 0.0, 2
 	node_attach = 0.0, -0.094, 0.0, 0.0, -1.0, 0.0, 2
-	
-	TechRequired = Unresearchable
+
+	TechRequired = metaMaterials
 	entryCost = 18200
 	cost = 3900
 	category = Coupling
