--- a/GameData/NearFutureConstruction/Parts/Docking/docking-truss/docking-linear-1.cfg
+++ b/GameData/NearFutureConstruction/Parts/Docking/docking-truss/docking-linear-1.cfg
@@ -19,7 +19,7 @@ PART
 	node_stack_top = 0.0, 0.022, 0.0, 0.0, 1.0, 0.0, 1
 	node_attach = 0.0, -0.15, 0.0, 0.0, -1.0, 0.0, 1
 
-	TechRequired = Unresearchable
+	TechRequired = metaMaterials
 	entryCost = 11200
 	cost = 2500
 	category = Coupling
