--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-125.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-125.cfg
@@ -89,4 +89,23 @@ PART
 		nodeType = size1
 		stagingEnabled = False
 	}
+	MODULE
+	{
+		name = ModuleB9PartSwitch
+		moduleID = meshSwitch
+		switcherDescription = #LOC_NFConstruction_switcher_docking_title
+		SUBTYPE
+		{
+			name = Basic
+			title= #LOC_NFConstruction_switcher_docking_variant1
+			transform = DockingPortClassicHollow
+		}
+		SUBTYPE
+		{
+			name = Hatch
+			title= #LOC_NFConstruction_switcher_docking_variant2
+			transform = DockingPortClassicReg
+		}
+
+	}
 }
