--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-octo.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-octo.cfg
@@ -106,8 +106,7 @@ PART
 		{
 			name = Hatch
 			title= #LOC_NFConstruction_switcher_docking_variant2
-			transform = Hatch
-			transform = HatchBack
+			transform = Hatches
 		}
 
 	}
