--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-docking-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-docking-01.cfg
@@ -67,9 +67,9 @@ PART
 		toggleInFlight = true
 		toggleInFlight = true
 		unfocusedRange = 5
-		toggleName = Toggle Lights
-		eventOnName = Lights On
-		eventOffName = Lights Off
+		toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
+		eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
+		eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
 		toggleAction = True
 		defaultActionGroup = Light
 		redCurve
