--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-octo.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-octo.cfg
@@ -101,12 +101,16 @@ PART
 		{
 			name = Basic
 			title= #LOC_NFConstruction_switcher_docking_variant1
+      descriptionSummary = #LOC_NFConstruction_switcher_docking_hollow_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_docking_hollow_detail
 		}
 		SUBTYPE
 		{
 			name = Hatch
 			title= #LOC_NFConstruction_switcher_docking_variant2
 			transform = Hatches
+      descriptionSummary = #LOC_NFConstruction_switcher_docking_hatch_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_docking_hatch_detail
 		}
 
 	}
