--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-125.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-125.cfg
@@ -2,112 +2,116 @@
 // Large truss 1.25m docking component
 PART
 {
-	name = truss-octo-docking-125
-	module = Part
-	author = ChrisAdderley
+  name = truss-octo-docking-125
+  module = Part
+  author = ChrisAdderley
 
-	MODEL
-	{
-		model = NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-125
-		position = 0.0, 0.0, 0.0
-		scale = 1,1,1
-		rotation = 0, 0, 0
-	}
+  MODEL
+  {
+    model = NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-docking-125
+    position = 0.0, 0.0, 0.0
+    scale = 1,1,1
+    rotation = 0, 0, 0
+  }
 
-	rescaleFactor = 1
+  rescaleFactor = 1
 
-	node_stack_top = 0.0, 0.1969378, 0.0, 0.0, 1.0, 0.0, 2
-	node_stack_bottom = 0.0, -0.0594593, 0.0, 0.0, -1.0, 0.0, 2
+  node_stack_top = 0.0, 0.1969378, 0.0, 0.0, 1.0, 0.0, 2
+  node_stack_bottom = 0.0, -0.0594593, 0.0, 0.0, -1.0, 0.0, 2
 
-	bulkheadProfiles = octotruss, size1
+  bulkheadProfiles = octotruss, size1
 
-	TechRequired = metaMaterials
-	entryCost = 11200
-	cost = 1200
-	category = Coupling
-	subcategory = 0
-	title = #LOC_NFConstruction_truss-octo-docking-125_title
-	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
-	description = #LOC_NFConstruction_truss-octo-docking-125_description
+  TechRequired = metaMaterials
+  entryCost = 11200
+  cost = 1200
+  category = Coupling
+  subcategory = 0
+  title = #LOC_NFConstruction_truss-octo-docking-125_title
+  manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+  description = #LOC_NFConstruction_truss-octo-docking-125_description
 
-	attachRules = 1,0,1,0,0
+  attachRules = 1,0,1,0,0
 
-	fuelCrossFeed = true
+  fuelCrossFeed = true
 
-	mass = 0.15
-	dragModelType = default
-	maximum_drag = 0.25
-	minimum_drag = 0.25
-	angularDrag = 0.5
-	crashTolerance = 20
-	maxTemp = 1400
+  mass = 0.15
+  dragModelType = default
+  maximum_drag = 0.25
+  minimum_drag = 0.25
+  angularDrag = 0.5
+  crashTolerance = 20
+  maxTemp = 1400
 
-	tags = #LOC_NFConstruction_truss-octo-docking-125_tags
-	stagingIcon = DECOUPLER_VERT
+  tags = #LOC_NFConstruction_truss-octo-docking-125_tags
+  stagingIcon = DECOUPLER_VERT
 
-	MODULE
-	{
-		name = ModuleColorChanger
-		shaderProperty = _EmissiveColor
-		animRate = 0.8
-		animState = false
-		useRate = true
-		toggleInEditor = true
-		toggleInFlight = true
-		toggleInFlight = true
-		unfocusedRange = 5
-		toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
-		eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
-		eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
-		toggleAction = True
-		defaultActionGroup = Light
-		redCurve
-		{
-			key = 0 0 0 3
-			key = 1 1 0 0
-		}
-		greenCurve
-		{
-			key = 0 0 0 1
-			key = 1 1 1 0
-		}
-		blueCurve
-		{
-			key = 0 0 0 0
-			key = 1 0.7 1.5 0
-		}
-		alphaCurve
-		{
-			key = 0 1
-		}
-	}
+  MODULE
+  {
+    name = ModuleColorChanger
+    shaderProperty = _EmissiveColor
+    animRate = 0.8
+    animState = false
+    useRate = true
+    toggleInEditor = true
+    toggleInFlight = true
+    toggleInFlight = true
+    unfocusedRange = 5
+    toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
+    eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
+    eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
+    toggleAction = True
+    defaultActionGroup = Light
+    redCurve
+    {
+      key = 0 0 0 3
+      key = 1 1 0 0
+    }
+    greenCurve
+    {
+      key = 0 0 0 1
+      key = 1 1 1 0
+    }
+    blueCurve
+    {
+      key = 0 0 0 0
+      key = 1 0.7 1.5 0
+    }
+    alphaCurve
+    {
+      key = 0 1
+    }
+  }
 
-	MODULE
-	{
-		name = ModuleDockingNode
-		referenceAttachNode = top
-		nodeType = size1
-		stagingEnabled = False
-	}
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitch
-		switcherDescription = #LOC_NFConstruction_switcher_docking_title
-		SUBTYPE
-		{
-			name = Basic
-			title= #LOC_NFConstruction_switcher_docking_variant1
-			transform = DockingPortClassicHollow
-		}
-		SUBTYPE
-		{
-			name = Hatch
-			title= #LOC_NFConstruction_switcher_docking_variant2
-			transform = DockingPortClassicReg
-		}
+  MODULE
+  {
+    name = ModuleDockingNode
+    referenceAttachNode = top
+    nodeType = size1
+    stagingEnabled = False
+  }
+  MODULE
+  {
+    name = ModuleB9PartSwitch
+    moduleID = meshSwitch
+    switcherDescription = #LOC_NFConstruction_switcher_docking_title
+    SUBTYPE
+    {
+      name = Basic
+      title= #LOC_NFConstruction_switcher_docking_variant1
+      transform = DockingPortClassicHollow
+      primaryColor = #000000
+      secondaryColor = #000000
+    }
+    SUBTYPE
+    {
+      name = Hatch
+      title= #LOC_NFConstruction_switcher_docking_variant2
+      transform = DockingPortClassicReg
+      primaryColor = #ffffff
+      secondaryColor = #808080
+    }
 
-	}
+  }
     MODULE
   {
     name = ModuleCargoPart
